Util commit.